<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flJuvenil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJuvenilFragment">

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="246dp"
        android:importantForAutofill="no"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cbProblema"
        app:layout_constraintTop_toBottomOf="@+id/cbProblema" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtdtNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtdtNascimento"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/dataNascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/txtBairro"
        app:layout_constraintStart_toStartOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <EditText
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cbProblema"
        app:layout_constraintStart_toStartOf="@+id/txtdtNascimento"
        app:layout_constraintTop_toBottomOf="@+id/txtdtNascimento" />

    <CheckBox
        android:id="@+id/cbProblema"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:text="@string/problemasCardiacos"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBairro" />

</androidx.constraintlayout.widget.ConstraintLayout>